# xiv-static-tracker

./: .gitignore  README.md  app.db  database.py  main.py  pyproject.toml  requirements.txt
migrations/app/: 0_20240817112233_init.py  0_20240818144844_init.py  1_20240817112441_tier.py
static/: app.db
static/css/: main.css
styles/: main.css
templates/: base.html
templates/components/: gear_details.html  group_details.html  index.html  player_details.html  player_needs.html
templates/components/gear/: index.html
templates/components/group/: details.html  index.html
templates/components/player/: index.html
templates/pages/: gear.html  group.html  index.html  player.html
templates/partials/: gear.html  group.html  index.html  player.html
